feat: implement metadata fetching
