# proto/gen/apidocs.swagger.yaml
@@ -415,6 +415,27 @@ paths:
           type: string
       tags:
         - ShortcutService
+  /api/v1/shortcuts:fetchMetadata:
+    post:
+      summary: GetUrlMetadata fetches social metadata from a URL.
+      operationId: ShortcutService_GetUrlMetadata
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/v1GetUrlMetadataResponse'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpcStatus'
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/v1GetUrlMetadataRequest'
+      tags:
+        - ShortcutService
   /api/v1/users:
     get:
       summary: ListUsers returns a list of users.
@@ -933,6 +954,26 @@ definitions:
         items:
           type: object
           $ref: '#/definitions/GetShortcutAnalyticsResponseAnalyticsItem'
+  v1GetUrlMetadataRequest:
+    type: object
+    properties:
+      url:
+        type: string
+  v1GetUrlMetadataResponse:
+    type: object
+    properties:
+      title:
+        type: string
+      description:
+        type: string
+      image:
+        type: string
+      siteName:
+        type: string
+      url:
+        type: string
+      favicon:
+        type: string
   v1IdentityProviderType:
     type: string
     enum:
